2019-12-09 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCClospre.cc:
	  Improve handling of ADDRESS_OF.
	* support/regression/tests/bug-2957.c:
	  Test for bug #2957.

2019-12-02 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/string.c:
	  Make preprocessor guards compatible with default setting of clang-9.

2019-11-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClrange.c,
	  support/regression/tests/bug-2956.c:
	  Fix bug #2956.

2019-11-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.y:
	  Fix bug #2953.

2019-11-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.y:
	  Fix bug #2954.

2019-11-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.y:
	  Revert previous syntax error on multiple data types commit, since it broke __at (which in SDCC is a type specifier).

2019-11-20 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCC.y:
	  Allow C2X attribute declarations and attribute arguments.

2019-11-20 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCC.y:
	  Reorganize grammar by appendix A.2 of C2X.

2019-11-19 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCC.lex,
	  src/SDCC.y,
	  src/SDCCerr.h,
	  src/SDCCerr.c:
	  Allow C2X attributes on statements.

2019-11-19 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c,
	  support/regression/tests/gcc-torture-execute-20181120-1.c:
	  Fix bug #2947.
	* src/SDCC.lex,
	  support/regression/tests/c2xkeywords.c:
	  Support C2X keyword from N2457.
	* support/regression/tests/gcc-torture-execute-pr47148.c,
	  support/regression/tests/gcc-torture-execute-pr63659.c,
	  support/regression/tests/gcc-torture-execute-pr64682.c:
	  Enable some tests that depend on C99 features now supported by SDCC.

2019-11-19 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/tests/gcc-torture-execute-*:
	  Add more GCC tests, RFE #652.
